--- a/index.html
+++ b/index.html
@@ -118,15 +118,15 @@
 
 
 
-	<div class="banner-ad-wrapper"><div class="banner-ad-content" style="padding: 20px 0; text-align: center;">
-		<!-- ads -->
+    <div class="banner-ad-wrapper">
+      <div class="banner-ad-content" style="padding: 20px; text-align: center;">
+
+        <iframe src="https://topvaz.com/ads/ads-728x90.html" width="728" height="90" scrolling="none" frameborder="0" allowfullscreen=""></iframe>
 
 
-		</div>
+      </div>
+    </div>
 
-
-
-	</div>	
 
 
 
